--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,6 +7,9 @@
     </h1>
   <% end%>
   <div>
+    <% if product.quantity < 1 %>
+      <%= content_tag :span, 'Sold Out', class: 'btn btn-danger' %> 
+    <% end %>
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
