--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -60,10 +60,30 @@
             <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
-        <li class="nav-item end-0">
+        <li class="nav-item ">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
+        <% if current_user %>
+          <li class="nav-item ">
+            <div class="nav-link">
+              Signed in as <%= current_user.first_name %> 
+            </div>
+          </li>
+          <li class="nav-item "><div class="nav-link"> | </div></li>
+          <li class="nav-item end-0"> 
+            <%= link_to "Logout", '/logout',  class: "nav-link " %>
+          </li>
+          <% else %>
+          <li class="nav-item ">
+            <%= link_to 'Login', '/login',  class: "nav-link " %> 
+          </li>
+          <li class="nav-item "><div class="nav-link"> | </div></li>
+          <li class="nav-item ">
+            <%= link_to 'Signup', '/signup',  class: "nav-link " %>
+          </li>
+          </div>
+        <% end %>
       </ul>
     </div>
   </div>
