--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,48 @@
-<h1>Signup!</h1>
+<div class="container">
+  <h1 class="text-center">Signup!</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
+  <%= form_for :user, url: '/users', html: { class: 'form-horizontal' } do |f| %>
 
-  First Name: <%= f.text_field :first_name %>
-  Last Name: <%= f.text_field :last_name %>
-  Email: <%= f.text_field :e_mail %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
+    <div class="form-group">
+      <%= f.label :first_name, 'First Name:', class: 'control-label col-sm-2' %>
+      <div class="col-sm-10">
+        <%= f.text_field :first_name, class: 'form-control' %>
+      </div>
+    </div>
 
-<% end %>
+    <div class="form-group">
+      <%= f.label :last_name, 'Last Name:', class: 'control-label col-sm-2' %>
+      <div class="col-sm-10">
+        <%= f.text_field :last_name, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :e_mail, 'Email:', class: 'control-label col-sm-2' %>
+      <div class="col-sm-10">
+        <%= f.text_field :e_mail, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password, 'Password:', class: 'control-label col-sm-2' %>
+      <div class="col-sm-10">
+        <%= f.password_field :password, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, 'Password Confirmation:', class: 'control-label col-sm-2' %>
+      <div class="col-sm-10">
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit "Submit", class: 'btn btn-primary' %>
+      </div>
+    </div>
+
+  <% end %>
+</div>
